# dependency-abstractor

./: README.md  pyproject.toml
dependency_abstractor/: __init__.py  __main__.py  script.py
dependency_abstractor/collectors/: __init__.py  debian.py  fedora.py  flatpak.py
dependency_abstractor/config/: cli.py  log.py
dependency_abstractor/data_structures/: __init__.py  arrowgraph.py  depgraph.py  package_collection.py
dependency_abstractor/generic/: colors.py  converters.py  formulas.py  graph_algorithms.py  system.py  terminal_colors.py
dependency_abstractor/output/: dot.py  text.py  tui.py
tests/: conftest.py  test_arrowgraph.py  test_cli.py  test_colors.py  test_dependency_abstractor.py  test_flatpak.py  test_terminal_colors.py
